--- a/app/src/main/res/layout/activity_input_textlayout.xml
+++ b/app/src/main/res/layout/activity_input_textlayout.xml
@@ -7,6 +7,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til"
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <EditText
